fix: single column layout on mobile for search component four (#46)
* feat: add media query to row class

* fix: define bottom border for single col layout

* fix: indent media query


* fix: add additional media query column class

---------

--- a/demos/DemoSearchComponentFour.module.scss
+++ b/demos/DemoSearchComponentFour.module.scss
@@ -147,6 +147,10 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   font-size: 12px;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .column {
@@ -160,6 +164,10 @@
 
   &:first-child {
     border-left: 0px;
+  }
+
+  @media (max-width: 768px) {
+    border-bottom: 1px solid var(--theme-border);
   }
 }
 
